Closing feature #2275 : adding a new entry in thee tools tab for reindexation

--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle.properties
@@ -21,10 +21,10 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-JMP.backSilverpeas = Retour à Silverpeas
+JMP.backSilverpeas = Retour \u00e0 Silverpeas
 
-JMP.exit = Se déconnecter
-JMP.feedback = Ecrire à l'administrateur
+JMP.exit = Se d\u00e9connecter
+JMP.feedback = Ecrire \u00e0 l'administrateur
 JMP.help = Aide
 JMP.tools = Outils
 JMP.clipboard = Presse-Papier
@@ -34,27 +34,31 @@ JKM = Plan de Classement
 JSTAT = Statistiques
 JTOOLS = Outils
 
-JDP = Référentiel
+JDP = Utilisateurs & groupes
 JSPP = Gestion d'espaces
 JRP = Profil
 JSP = Recherche
 JMAP = Maintenance
 JST = Console SilverTrace
 JTD = Formulaires
+portlets = Portlets
+reindexation=Reindexation
+JAB = A propos...
 
 JKM1 = Axes
 JKM2 = Synonymes
 JSTAT1 = Connexions
-JSTAT2 = Accès
+JSTAT2 = Acc\u00e8s
 JSTAT3 = Volumes
-JSTAT4 = Classification scheme
+JSTAT4 = Plan de classement
 
 JBKP = Sauvegarde
 
-JRI = Import Répertoire
+JRI = Import R\u00e9pertoire
 JIE = Moteur d'importation
 JSA = Gestion des IP
 JWD = Workflows
+
 
 JRIFBP = FileBox+ Directory Import
 
@@ -62,4 +66,4 @@ JMAP = Maintenance
 JMAP.header1 = Gestion globale du mode Maintenance
 JMAP.maintenanceOnAir = L'application est actuellement en mode maintenance....
 JMAP.active = Activer
-JMAP.desactive = Désactiver
+JMAP.desactive = D\u00e9sactiver
