--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle.properties
@@ -137,3 +137,25 @@ connectedUsers = autres utilisateurs connectés
 2 = Problème technique
 3 = Votre session a expiré
 4 = Déconnexion utilisateur
+
+admin.reindex = R\u00E9-indexation
+admin.reindex.help = Pour une r\u00E9-indexation optimale, le r\u00E9pertoire de l'\u00E9l\u00E9ment \u00E0 r\u00E9indexer doit \u00EAtre supprim\u00E9 manuellement du r\u00E9pertoire SILVERPEAS_DATA_HOME/index.
+admin.reindex.inprogress = Indexation lanc\u00E9e en t\u00E2che de fond !
+admin.reindex.op.all = R\u00E9indexer tout
+admin.reindex.op.spaces = R\u00E9indexer les espaces
+admin.reindex.op.users = R\u00E9indexer les utilisateurs
+admin.reindex.op.groups = R\u00E9indexer les groupes
+admin.reindex.op.pdc = R\u00E9indexer le Plan de classement
+admin.reindex.op.todos = R\u00E9indexer les t\u00E2ches des espaces personnels
+admin.reindex.op.agendas = R\u00E9indexer les agendas des espaces personnels
+
+admin.reindex.js.warn = Vous \u00EAtes sur le point de r\u00E9indexer 
+admin.reindex.js.warn.compo = une application
+admin.reindex.js.warn.space = un espace
+admin.reindex.js.warn.perso = une application de l'espace personnel
+admin.reindex.js.warn.spaces = tous les espaces
+admin.reindex.js.warn.users = tous les utilisateurs
+admin.reindex.js.warn.groups = tous les groupes
+admin.reindex.js.warn.pdc = le plan de classement
+admin.reindex.js.warn.all = toute la plateforme
+admin.reindex.js.warn.confirm = Etes-vous s\u00FBr(e) de vouloir effectuer cette op\u00E9ration ?
