closing partially feature #2098 Adding new form field "explorer" This new field is supported by form and workflow designers

--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
@@ -101,3 +101,5 @@ White = Blanc
 
 form.Extra = Informations compl\u00e9mentaires
 form.field.file.toolong = doit \u00eatre un fichier dont le nom ne doit pas exc\u00e9der 100 caract\u00e8res.
+
+field.explorer.browse = Parcourir...
