--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -95,3 +95,8 @@ sequence.implementation = com.silverpeas.form.fieldType.SequenceField
 sequence.displayer = com.silverpeas.form.displayers.SequenceFieldDisplayer
 sequence.displayer.sequence = com.silverpeas.form.displayers.SequenceFieldDisplayer
 sequence.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
+
+explorer.implementation = com.silverpeas.form.fieldType.ExplorerField
+explorer.displayer = com.silverpeas.form.displayers.ExplorerFieldDisplayer
+explorer.displayer.explorer = com.silverpeas.form.displayers.ExplorerFieldDisplayer
+explorer.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
