--- a/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/settings/workflowDesigner.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/settings/workflowDesigner.properties
@@ -24,8 +24,8 @@
 languages = fr,en,de
 actionKinds = create,update,delete
 operators = =,!=,<,<=,>,>=,contains
-itemTypes = text,date,user,file
-displayerNames = checkbox,file,listbox,radio,text,textarea,simpletext,user
+itemTypes = text,date,user,file,explorer
+displayerNames = text,textarea,checkbox,listbox,radio,file,simpletext,user,explorer
 componentDescriptor.parameterLabel = Modèle de procédures
 componentDescriptor.suite = 05 Workflow
 componentDescriptor.managerInstanciator = com.silverpeas.processManager.ProcessManagerInstanciator
