--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/formIcons.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/formIcons.properties
@@ -27,3 +27,4 @@ px = /util/icons/colorPix/1px.gif
 delete = /util/icons/delete.gif
 jdbc = /util/icons/update.gif
 groupPanel = /util/icons/groupe.gif
+explorer = /util/icons/folder.gif
