fixing bug #2727, change oldDebug appender to reference another file than root appender

--- a/config-core/src/main/config/silvertrace/oldDebugModule.properties
+++ b/config-core/src/main/config/silvertrace/oldDebugModule.properties
@@ -99,7 +99,7 @@ appender0.enabled=true
 appender0.type=APPENDER_FILE
 appender0.module=oldDebug
 appender0.layout=LAYOUT_DETAILED
-appender0.fileName=@ErrorDir@/traces.txt
+appender0.fileName=@ErrorDir@/oldDebug.txt
 appender0.append=true
 
 # Modules' initial trace level
