Add a new translation (GML.At)

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -294,6 +294,7 @@ GML.operations.setupComponent = Param\u00e9trer ce service
 
 GML.to = au
 GML.at = \u00e0
+GML.At = A
 GML.From = De
 GML.linkToVisit = Lien \u00e0 visiter
 GML.Show = Afficher :
