--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasLight.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasLight.properties
@@ -76,7 +76,7 @@ interestVisible =
 favRequestVisible =
 fileSharingVisible = true
 webconnectionsVisible = true
-scheduleEventVisible=false
+scheduleEventVisible = true
 
 # URL aide en ligne
 helpURL = /help_fr/index.html
