[maven-release-plugin] prepare for next development iteration

--- a/ejb-core/calendar/pom.xml
+++ b/ejb-core/calendar/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.silverpeas.core</groupId>
         <artifactId>ejb-core</artifactId>
-        <version>5.8</version>
+        <version>5.9-SNAPSHOT</version>
     </parent>
 
     <groupId>com.silverpeas.core.ejb-core</groupId>
