--- a/it-test-core/pom.xml
+++ b/it-test-core/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>it-test-core</artifactId>
   <version>5.9-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <name>Integration Test Core</name>
+  <name>Integration Test Core - ${version}</name>
   <description>
      This module is aiming at gathering tests that take longer time to run. They are generally
      tests about the integration of the different Silverpeas core components.
