--- a/ejb-core/calendar/pom.xml
+++ b/ejb-core/calendar/pom.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.silverpeas.core</groupId>
-        <artifactId>ejb-core</artifactId>
-        <version>5.9-SNAPSHOT</version>
-    </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.silverpeas.core</groupId>
+    <artifactId>ejb-core</artifactId>
+    <version>5.9-SNAPSHOT</version>
+  </parent>
 
-    <groupId>com.silverpeas.core.ejb-core</groupId>
-    <artifactId>calendar</artifactId>
-    <packaging>ejb</packaging>
-    <name>EJB Calendar</name>
+  <groupId>com.silverpeas.core.ejb-core</groupId>
+  <artifactId>calendar</artifactId>
+  <packaging>ejb</packaging>
+  <name>EJB Calendar - ${version}</name>
 
-    <build>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-                <filtering>true</filtering>
-            </testResource>
-        </testResources>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>test-core</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+  <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
+  </build>
+  <dependencies>
+    <dependency>
+      <groupId>${project.parent.groupId}</groupId>
+      <artifactId>test-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
