--- a/ejb-core/contact/pom.xml
+++ b/ejb-core/contact/pom.xml
@@ -10,7 +10,7 @@
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>contact</artifactId>
   <packaging>ejb</packaging>
-  <name>EJB Contact</name>
+  <name>EJB Contact - ${version}</name>
 
   <dependencies>
     <dependency>
