--- a/ejb-core/statistic/pom.xml
+++ b/ejb-core/statistic/pom.xml
@@ -10,7 +10,7 @@
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>statistic</artifactId>
   <packaging>ejb</packaging>
-  <name>EJB Statistic</name>
+  <name>EJB Statistic - ${version}</name>
 	
   <dependencies>
     <dependency>
