--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -10,7 +10,7 @@
   <groupId>com.silverpeas.core</groupId>
   <artifactId>war-core</artifactId>
   <packaging>war</packaging>
-  <name>Core Webapp</name>
+  <name>Core Webapp - ${version}</name>
   <description>The Web GUI for the core elements of Silverpeas : Administration, notifications and all the navigation.</description>
 
   <dependencies>
