--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -10,7 +10,7 @@
   <groupId>com.silverpeas.core</groupId>
   <artifactId>web-core</artifactId>
   <packaging>jar</packaging>
-  <name>Web Core Library - ${version}</name>
+  <name>Web Core Library - ${project.version}</name>
   <description>A module providing all the basic services of Silverpeas on which can we can build the Web GUI.</description>
   
   <dependencies>
