--- a/web-core/src/test/resources/com/silverpeas/util/i18n.properties
+++ b/web-core/src/test/resources/com/silverpeas/util/i18n.properties
@@ -21,4 +21,4 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-languages = fr,en,de
+languages = fr,en
