--- a/ejb-core/authentication/pom.xml
+++ b/ejb-core/authentication/pom.xml
@@ -11,6 +11,6 @@
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>authentication</artifactId>
   <packaging>ejb</packaging>
-  <name>EJB Authentication - ${version}</name>
+  <name>EJB Authentication - ${project.version}</name>
 </project>
 
