feature #2824 : Updating Office Launcher to Jackrabbit 2.2

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -932,7 +932,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LaunchWebdavEdition</servlet-name>
-        <url-pattern>/launch.jsp</url-pattern>
+        <url-pattern>/attachment/jsp/launch.jsp</url-pattern>
     </servlet-mapping>
     <error-page>
         <error-code>404</error-code>
