closing feature #1887 Synchronizations of users and groups are defined by a cron tab

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/beans/admin/admin.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/beans/admin/admin.properties
@@ -70,9 +70,8 @@ EntrepriseClientSpaceId = 1
 # Nb max characters for space's name
 spaceMaxChar = 20
 
-# Delay between each synchro cycles IN SECONDS [Default : 900 (i.e. 15 min)]
-AdminThreadedSynchroDelay = 14400
-
+# Cron to determine when synchronizations are done
+DomainSynchroCron = 45 6 * * *
 GroupSynchroCron = 0,30 * * * *
 
 # Space XML Package
