--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ target
 /ejb-core/calendar/.classpath
 /ejb-core/calendar/.project
 /ejb-core/calendar/src/main/resources/META-INF/MANIFEST.MF
+web-core/@ErrorDir@/
