Clean code linked to bug #1793 Add test using H2 embedded database Add a global CSS in order to remove the old valign="absmiddle" rules in HTML code.

--- a/ejb-core/questioncontainer/pom.xml
+++ b/ejb-core/questioncontainer/pom.xml
@@ -26,5 +26,20 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.silverpeas.core</groupId>
+      <artifactId>test-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>    
   </dependencies>
+  
+  <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
+  </build>
 </project>
