closing feature #2833 adding operation to recover spaces and applications rights

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -145,3 +145,4 @@ JSPP.BinDeleteConfirm = Etes-vous s\u00fbr(e) de vouloir supprimer d\u00e9finiti
 JSPP.BinDeleteConfirmSelected = Etes-vous s\u00fbr(e) de vouloir supprimer d\u00e9finitivement les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s et tout ce qu'ils contiennent ?
 
 JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>URL</b> : <ul><li>Adresse absolue. Exemple : http://www.google.com</li><li>Adresse interne. Exemple : /admin/jsp/page.jsp (ne pas pr\u00e9ciser le contexte /silverpeas)</li><li>Adresse interne dans une autre application web. Exemple : <b>$</b>/weblib/pages/page.jsp (commencer par $/<nom_application_web>)</li></ul>
+JSPP.spaceRecover = Recouvrer les droits
