--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
@@ -42,3 +42,5 @@ DisplaySpacesBeforeComponents=BEFORE
 DisplaySpacesAfterComponents=AFTER
 DisplaySpacesToDefine=TODEFINE
 DisplaySpacePositionConfiguration=BEFORE
+
+EnableRecoverRightsOperation=false
