--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -98,7 +98,13 @@ JSPP.MessageSuppressionInstanceBegin = Etes-vous sur de vouloir supprimer ce ser
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 # onglets roles
-Manager = Manager d'espace 
+Manager = Manager d'espace
+JSPP.admin = Gestionnaires
+JSPP.publisher = Publieurs
+JSPP.writer = R\u00e9dacteurs
+JSPP.reader = Lecteurs
+
+JSPP.Manager.help = Le r\u00f4le "Manager d'espace" permet uniquement de d\u00e9l\u00e9guer l'administration de cet espace \u00e0 n'importe quel utilisateur.<br/>Par d\u00e9faut, un "manager d'espace" n'a aucun droit sur les applications de l'espace.<br/>Attention donc de ne pas confondre ce r\u00f4le avec celui de "Gestionnaire" qui s'applique bien aux applications de l'espace.
 
 # Gestion de l'ordre
 JSPP.SpaceOrder = D\u00e9placement de l'espace
