on feature #2714, export of publications can be done according to different modes

--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle.properties
@@ -65,3 +65,10 @@ importExportPeas.toExport				= Exporter les documents sélectionnés
 importExportPeas.ExportDuration			= Durée de l'exportation
 importExportPeas.FileSize				= Taille du fichier à télécharger
 importExportPeas.File					= Fichier à télécharger
+
+importExportPeas.InProgress				= Exportation en cours...
+
+importExportPeas.export.what			= Que souhaitez-vous exporter ?
+importExportPeas.export.mode.filesOnly	= Fichiers seulement
+importExportPeas.export.mode.pubsOnly	= Publications et fichiers joints
+importExportPeas.export.mode.full		= Export complet
