fixing bug #2875 Updating basic user informations and password is correctly managed (cross LDAP implementation)

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/authentication/autDomainOpenDS.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/authentication/autDomainOpenDS.properties
@@ -37,6 +37,7 @@ autServer0.type=com.stratelia.silverpeas.authentication.AuthenticationLDAP
 autServer0.enabled=true
 autServer0.LDAPHost=localhost
 autServer0.LDAPPort=1389
+autServer0.LDAPImpl=opends
 autServer0.LDAPAccessLogin=cn=Directory Manager,cn=Root DNs,cn=config
 autServer0.LDAPAccessPasswd=password
 autServer0.LDAPUserBaseDN=ou=silverpeas,dc=silverpeas,dc=com
