closing feature #2713, Notify user by email and add a confirm input type text

--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
@@ -57,6 +57,7 @@ JDP.missingFieldStart = Le champ '
 JDP.missingFieldEnd = ' est obligatoire
 JDP.minLength = ' doit contenir au moins
 JDP.noSpaces = ' ne doit pas contenir d'espace
+JDP.confirmPwdError = Les mots de passe ne correspondent pas.
 
 JDP.name=Nom
 JDP.synchroRule = Règle de synchronisation
@@ -113,3 +114,6 @@ JDP.fieldSyntax = Syntaxe de recherche
 JDP.fieldSyntaxContent = Possibilité d'utiliser la troncature *
 JDP.importAll = Importer tous les utilisateurs
 JDP.importSelected = Importer les utilisateurs sélectionnés
+
+JDP.sendEmail = Envoyer les param\u00E8tres de connexion par email :
+JDP.createAccountNotifTitle = Silverpeas - Identifiant de votre compte
