--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -128,20 +128,21 @@ GML.operations						= Op&eacute;rations
 GML.organization					= Organisations
 GML.order					        = Ordre
 
-GML.password 						= Mot de passe
+GML.password 					= Mot de passe
+GML.passwordAgain 				= Confirmez le mot de passe
 GML.paste						= Coller
 GML.path						= Emplacement
-GML.phoneNumber 					= T\u00e9l\u00e9phone
-GML.position 						= Poste
+GML.phoneNumber 				= T\u00e9l\u00e9phone
+GML.position 					= Poste
 GML.public 						= Publique
 GML.preview						= Pr\u00e9visualisation
-GML.previous						= Pr\u00e9c\u00e9dent
+GML.previous					= Pr\u00e9c\u00e9dent
 GML.print						= Imprimer
-GML.priority 						= Priorit\u00e9
-GML.privateFS 						= Priv\u00e9e
-GML.privateMS 						= Priv\u00e9
-GML.publication						= Publication
-GML.publications					= Publications
+GML.priority 					= Priorit\u00e9
+GML.privateFS 					= Priv\u00e9e
+GML.privateMS 					= Priv\u00e9
+GML.publication					= Publication
+GML.publications				= Publications
 GML.publish						= Publier
 
 GML.restore						= Restaurer
