--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
@@ -44,3 +44,7 @@ DisplaySpacesToDefine=TODEFINE
 DisplaySpacePositionConfiguration=BEFORE
 
 EnableRecoverRightsOperation=false
+
+
+templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/admin/space (défini dans SilverpeasSettings.xml)
+customersTemplatePath = ${SILVERPEAS_DATA_HOME}/StringTemplates/admin/space
