fixing bug #2867 Adding parameter in both properties

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasLight.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasLight.properties
@@ -66,6 +66,7 @@ customVisible =
 helpVisible =
 clipboardVisible =
 glossaryVisible =
+directoryVisible = 
 
 # Visibilit\u00e9 composants Espace personnel ("false" pour masquer)
 personnalSpaceVisible =
