--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -67,6 +67,7 @@ customVisible =
 helpVisible =
 clipboardVisible =
 glossaryVisible =
+directoryVisible = 
 
 # Visibilit\u00e9 composants Espace personnel ("false" pour masquer)
 personnalSpaceVisible =
