Adding support for org.silverpeas package

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverstatistics/SilverStatistics.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverstatistics/SilverStatistics.properties
@@ -126,7 +126,7 @@ projectManager = com.silverpeas.projectManager.ProjectManagerStatistics
 rssAgregator = com.silverpeas.rssAgregator.RssAgregatorStatistics
 webPages = com.silverpeas.webpages.WebPagesStatistics
 mailinglist = com.silverpeas.mailinglist.MailingListStatistics
-resourcesManager = com.silverpeas.resourcesmanager.ResourcesManagerStatistics
+resourcesManager = org.silverpeas.resourcemanager.ResourcesManagerStatistics
 classifieds = com.silverpeas.classifieds.ClassifiedsStatistics
 
 # pdc component class name for volume feed
