--- a/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle.properties
@@ -1,28 +1,14 @@
-#Les droit
-A=GML.administrateur
-D=GML.domainManager
-K=GML.kmmanager
-U=GML.user
-G=GML.guest
+#Index
+directory.scope.all = Tous
+directory.scope.connected = Connect\u00E9s
 
-#notificationUser
-notificationUser.title=Nouveau message \u00E0 
-notificationUser.object=Objet
-notificationUser.message=Message
+directory.breadcrumb.0 = Annuaire
+directory.breadcrumb.1 = Mes contacts
+directory.breadcrumb.2 = Mes contacts communs avec
+directory.breadcrumb.3 = Contacts de
+directory.breadcrumb.4 = Annuaire du groupe
+directory.breadcrumb.5 = Annuaire du domaine
+directory.breadcrumb.6 = Annuaire de l'espace
 
-#Connexion
-directory.connected=Connect\u00E9 depuis
-directory.deconnected=D\u00E9connect\u00E9
-#UserInvitation
-userInvitation.titleprefix=Ajouter
-userInvitation.titleSuffix=\u00E0 mon r\u00E9seau
-userInvitation.remark=devra confirmer l'invitation
-userInvitation.action.remark=Ajouter un message personel
-userInvitation.action.send=Envoyer
-userInvitation.action.cancel=Annuler
-userInvitation.message=Message
-userInvitation.sendMessage=Envoyer un message
-
-#image profil
-directory.photo=Image
-directory.buttonValid=Valider
+directory.query.error.title = Recherche impossible
+directory.query.error.msg = Les caractères * et ? sont des <b>caractères joker</b>.<br/>Ils ne peuvent pas être utilisés au début d'un terme.<br/><br/>Merci de corriger la requête et de relancer votre recherche...
