--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -92,7 +92,7 @@ myContactProfile.tab.profile = Profil
 myContactProfile.tab.wall = Mur
 myContactProfile.contacts.common = contacts communs
 
-profil.subnav.display=Afficher\:
+profil.subnav.display=Afficher : 
 profil.subnav.identity=Identit\u00e9
 
 invitation.send = Envoyer une invitation
