closing feature #2716 displaying sums on pages related to volumes

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle.properties
@@ -108,3 +108,10 @@ silverStatisticsPeas.pdc.cross.axis.second=Second axe
 silverStatisticsPeas.pdc.cross.select=S\u00E9lectionner un axe
 silverStatisticsPeas.pdc.error.select=Veuillez s\u00E9lectionner deux axes.
 silverStatisticsPeas.pdc.error.same=Vous devez s\u00E9lectionner deux diff\u00E9rents axes.
+
+silverStatisticsPeas.sums.applications = applications
+silverStatisticsPeas.sums.attachments.number = fichiers joints
+silverStatisticsPeas.sums.attachments.size = de fichiers joints
+silverStatisticsPeas.sums.contributions = contributions
+
+silverStatisticsPeas.volumes.tab.contributions = Contributions
