Feature #2786  : Integration Facebook et LinkedIN

--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication.properties
@@ -31,6 +31,7 @@ authentication.logon.passwordForgotten = Mot de passe oubli\u00E9 ?
 authentication.logon.passwordRemember = M\u00E9moriser le mot de passe ?
 authentication.logon.loginMissing = Veuillez renseigner votre login
 authentication.logon.passwordReinit = R\u00E9initialiser mon mot de passe...
+authentication.logon.socialNetworkLogin = Ou se connecter avec
 
 # traitement des erreurs de login
 authentication.logon.1 = Login ou mot de passe incorrect
