--- a/config-core/src/main/config/properties/com/silverpeas/authentication/settings/authenticationSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/settings/authenticationSettings.properties
@@ -22,8 +22,15 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # Save identification/pwd in client cookies
-
 cookieEnabled = false
+
 # true Available only if cookieEnabled is set to true
 autoSubmit = false
-encryptionClass = 
+encryptionClass =
+
+# Allow new user to self register in Silverpeas
+allowUserSelfRegistration = false
+
+# Such new user will be created in below domainId
+justRegisteredDomainId = 0
+ 
