--- a/lib-core/src/test/resources/com/silverpeas/socialnetwork/settings/socialNetworkSettings.properties
+++ b/lib-core/src/test/resources/com/silverpeas/socialnetwork/settings/socialNetworkSettings.properties
@@ -8,6 +8,8 @@ newsFeed.period = 15
 templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/socialNetwork/
 customersTemplatePath=${SILVERPEAS_DATA_HOME}/StringTemplates/socialNetwork/
 
+authentication.justRegisteredDomainId = 0
+
 #An LinkedIn application must be declared : LinkedIn will give you both consumer and secret keys
 linkedIn.consumerKey = 178g9y3p1850
 linkedIn.secretKey = ejpvgiKBhH0jwXYm
