Closing feature #2923 : Adding the key display.all.components with the value true enables the display of all components in the site map, even those that are marked as hidden

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/Metal.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/Metal.properties
@@ -76,6 +76,8 @@ interestVisible =
 favRequestVisible =
 fileSharingVisible = true
 webconnectionsVisible = true
+# Display hidden components on site map : true to show - false or empty otherwise.
+display.all.components=false
 
 # URL aide en ligne
 helpURL = /help_fr/index.html
