--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -80,6 +80,9 @@ fileSharingVisible = true
 webconnectionsVisible = true
 scheduleEventVisible=false
 
+# Display hidden components on site map : true to show - false or empty otherwise.
+display.all.components=false
+
 # URL aide en ligne
 helpURL = /help_fr/index.html
 
