--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasLight.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasLight.properties
@@ -79,6 +79,9 @@ fileSharingVisible = true
 webconnectionsVisible = true
 scheduleEventVisible = true
 
+# Display hidden components on site map : true to show - false or empty otherwise.
+display.all.components=false
+
 # URL aide en ligne
 helpURL = /help_fr/index.html
 
