closing feature #2885 adding a generic widget to display a welcome message on main page of each application... user can definitively close message. His decision is saved into cookies.

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle.properties
@@ -38,3 +38,7 @@ GEF.operations.label = Que voulez-vous faire ?
 
 GEF.export.label = Format d'exportation
 GEF.export.option.csv=CSV
+
+GEF.welcome.title = Bienvenue !
+GEF.welcome.button.ok = OK
+GEF.welcome.button.reminder = Me le rappeler
